--- a/references.bib
+++ b/references.bib
@@ -23,7 +23,7 @@
     year = {2022},
     url = {http://www.posit.co/},
   }
-  @Manual{Rcore22,
+@Manual{Rcore22,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
@@ -38,5 +38,13 @@
 	journal = {The Journal of Statistical Software},
 	author = {Wickham, Hadley},
 	year = {2014},
+}
+@article{sowler_bat_2013,
+	title = {Bat passes - redundant or still useful? {An} alternative approach to teh analysis and interpretation of large amounts of data},
+	volume = {79},
+	journal = {In Practice},
+	author = {Sowler, S and Middleton, N},
+	year = {2013},
+	pages = {16--18},
 }
 
