--- a/statistics.qmd
+++ b/statistics.qmd
@@ -22,7 +22,7 @@ library(broom)
 
 Statistical tests are undertaken to improve ecological understanding, separating the single from the noise. It enhances the ecological description when writing reports, making the report more evidenced based and therefore more robust and reproducible by others. When the data is not clear, or there is too much data to see, good statistics brings comprehension. Then there is a tendency to perceive connections or meaningful patterns between unrelated or random things, termed apophenia; here statistical testing can demonstrate it is random or unrelated.
 
-There are many reference books for ecologists on statistics such as the gentle introductions _Statistics for Terrified Biologists_ [@emden_statistics_2008], _Practical Statistics for Field Biology_ [@fowler_practical_1998]  and _Choosing and Using Statistics: A Biologist's Guide_ [@dytham_choosing_2011]. A more comprehensive guide to ecological statistics is available from _Numerical Ecology_ [@legendre_numerical_2012] and _Analysiing Ecological Data_ [@zuur_analysiing_2007]. The _Numerical Ecology with {R}_ [@borcard_numerical_2011] has a focus on ecological statistics using the R environment.
+There are many reference books for ecologists on statistics such as the gentle introductions _Statistics for Terrified Biologists_ [@emden_statistics_2008], _Practical Statistics for Field Biology_ [@fowler_practical_1998]  and _Choosing and Using Statistics: A Biologist's Guide_ [@dytham_choosing_2011]. More comprehensive guides to ecological statistics are available from _Numerical Ecology_ [@legendre_numerical_2012] and _Analysiing Ecological Data_ [@zuur_analysiing_2007]. The _Numerical Ecology with R_ [@borcard_numerical_2011] has a focus on ecological statistics using the R environment, while recent theory and application can be found in  _Ecological Statistics_ [@fox_ecological_2015].
 
 
 ## Summary Statistics
