--- a/resources.qmd
+++ b/resources.qmd
@@ -97,10 +97,12 @@ A prime resource for learning `r glue("{ds_txt}")` with R are the the online boo
 
 [R for Data Science](http://r4ds.had.co.nz/index.html) (R4DS) is an excellent overview of data science with R; it introduces the [`tidyverse`](https://www.tidyverse.org/) a collection of packages providing essential data science tools [@tidyverse2019; @R-tidyverse]; many of these individual packages are referenced below. The tidyverse packages have been widely adopted by R Data Scientists;  all packages share an underlying design philosophy, grammar, and data structures. 
 
-There are many free learning resources online; a couple of well structured courses are:
+There are many free learning resources online; well structured courses are:
 
-* [R for the Rest of US](https://rfortherestofus.com/courses/getting-started/)
 * [RStudio](https://education.rstudio.com/)
+* [Coding Club](https://ourcodingclub.github.io/) for ecologists and environmental scientists.
+* [R for the Rest of US](https://rfortherestofus.com/courses/getting-started/)
+
 
 Other online books:
 
@@ -110,7 +112,7 @@ Other online books:
 
 Getting data into R from *csv* and *Excel* files can be done with [`readr`](https://readr.tidyverse.org/) [@R-readr] and [`readxl`](https://readxl.tidyverse.org/) [@R-readxl] packages respectively. See also [Data import](https://r4ds.had.co.nz/data-import.html) in R4DS. 
 
-Once loaded in the R environment it is stored as a [`tibble`](https://r4ds.had.co.nz/tibbles.html) [@R-tibble]. A Tibble is tabulated data, in R terms a simplified data frame, that make working in the tidyverse a little easier.
+Once loaded in the R environment it is stored as a [`tibble`](https://r4ds.had.co.nz/tibbles.html) [@R-tibble]. A Tibble is tabulated data, in R terms a simplified data frame, making working in the tidyverse a little easier.
 
 Data wrangling is made easy with functions from the [`dplyr`](https://dplyr.tidyverse.org/) [@R-dplyr] and [`tidyr`](https://tidyr.tidyverse.org/) packages. See also [Tidy Data](https://r4ds.had.co.nz/tidy-data.html) and [Data transformation](https://r4ds.had.co.nz/transform.html) in R4DS. 
 
@@ -194,7 +196,7 @@ Online books:
 
 ## Reporting
 
-Reports can be produced through literate programming [@knuth84] with [R Markdown](https://rmarkdown.rstudio.com/) [@R-rmarkdown; @rmarkdown2018; @rmarkdown2020] and [Quarto®](https://quarto.org/); to use Quarto with R, the `rmarkdown` R package should be installed; the `rmarkdown` package will also install the [`knitr`](https://yihui.org/knitr/) package [@knitr2014; @knitr2015; @R-knitr] to ensure documents render containing R code.
+Reports can be produced through literate programming [@knuth_literate_1984] with [R Markdown](https://rmarkdown.rstudio.com/) [@R-rmarkdown; @rmarkdown2018; @rmarkdown2020] and [Quarto®](https://quarto.org/); to use Quarto with R, the `rmarkdown` R package should be installed; the `rmarkdown` package will also install the [`knitr`](https://yihui.org/knitr/) package [@knitr2014; @knitr2015; @R-knitr] to ensure documents render containing R code.
 
 Rending reports into Microsoft Word or PowerPoint can be greatly enhanced by:
 
