--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format:
 number-sections: true
 ---
 
-These web pages compliment the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] and R Markdown[^13] which can vastly improve workflow (*welcome to the world beyond Excel*).
+These web pages complement the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] and R Markdown[^13] which can vastly improve workflow (*welcome to the world beyond Excel*).
 
 [^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>
 [^13]: R Markdown see <https://rmarkdown.rstudio.com/>
