--- a/about.qmd
+++ b/about.qmd
@@ -24,6 +24,6 @@ This web site also introduces the `iBats` package[^2]. `iBats` is a package with
 
 <!-- The `iBats` name is borrowed from Prof Kate Jones and follows in the citizen science spirit of the original __iBats__. -->
 
-Finally a special thanks to the bat workers who have put up with my incessant data talk, especially: Amanda, Anna, Kevin, Liat, Phil, Richard and, Suzy.
+Finally a special thanks to the bat workers who have put up with my incessant data talk, especially: Amanda, Anna, Kevin, Liat, Phil, Richard and Suzy. Plus Lisa who introduced me to GTD and better time management. 
 
 ![](Images/homesunrise2.png)
