--- a/packages.bib
+++ b/packages.bib
@@ -316,12 +316,29 @@ Phase},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.1},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
   year = {2022},
   note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-tinytex,
+  title = {tinytex: Helper Functions to Install and Maintain TeX Live, and Compile
+LaTeX Documents},
+  author = {Yihui Xie},
+  year = {2022},
+  note = {R package version 0.43},
+  url = {https://github.com/rstudio/tinytex},
 }
 
 @Manual{R-vegan,
@@ -448,5 +465,16 @@ Phase},
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
+}
+
+@Article{tinytex2019,
+  title = {TinyTeX: A lightweight, cross-platform, and easy-to-maintain LaTeX distribution based on TeX Live},
+  author = {Yihui Xie},
+  journal = {TUGboat},
+  year = {2019},
+  volume = {40},
+  number = {1},
+  pages = {30--32},
+  url = {https://tug.org/TUGboat/Contents/contents40-1.html},
 }
 
