--- a/index.qmd
+++ b/index.qmd
@@ -7,19 +7,19 @@ format:
 number-sections: true
 ---
 
-These web pages complement the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] and R Markdown[^13] which can vastly improve workflow (*welcome to the world beyond Excel*).
+These web pages complement the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] and R Markdown[^13] which can vastly improve workflow[^23] (*welcome to the world beyond Excel*).
 
-The term _Data Science_ is used, as this covers data collection, management, processing, analysis, visualization, interpretation and reporting. Interesting to note; statisticians would state this is what they have always done [@Daviddonoho201750:9bd5].
+The term _Data Science_ is used, as this covers data collection, management, processing, analysis, visualisation, interpretation and reporting. Note: statisticians would state this process is what they have always done [@Daviddonoho201750:9bd5].
 
-The data science is applied through literate programming [@knuth_literate_1984] outlined in @fig-workflowred. This enables efficient reporting of bat data[^8] from a simple table, such as a count of bats, to the output and interpretation of machine learning in a fully formatted report; plus everything in-between, all can be accomplished through open source R[^9] [@R-base] and RStudio [@RStudio22]. 
+The data science is applied through literate programming [@knuth_literate_1984] outlined in @fig-workflowred. This enables efficient reporting of bat data[^8] from a simple table, such as a count of bats, to the output and interpretation of machine learning in a fully formatted report; plus everything in-between, all accomplished through open source R[^9] [@R-base] and RStudio [@RStudio22]. 
 
 ![Literate Programming](Images/workflowRed.png){#fig-workflowred}
 
-Much is said about the digital skills gap [^20]; if only in a small way, these data science pages aim to improve our digital skills by giving a practical approach of accessing modern data science methods[^21]. For a balanced understanding of the link between digital skills and data science see the [Royal Statistical Society article](https://realworlddatascience.net/news-and-views/editors-blog/posts/2023/02/14/digital-skills.html)
+Much is said about the digital skills gap [^20]; in a small way, these data science pages aim to improve digital skills by demonstrating modern data science methods[^21]. For a balanced understanding of the link between digital skills and data science see the [Royal Statistical Society article](https://realworlddatascience.net/news-and-views/editors-blog/posts/2023/02/14/digital-skills.html)
 
-You may ask what's wrong the spreadsheet for data science? On a practical level spreadsheets are hard to maintain, find errors in or see there was an error in the first place, they are poor at handling dates and difficult to share with others.  For the blunders of spreadsheet use listen to [Spreadsheet disasters](https://www.bbc.co.uk/sounds/play/w3ct3k5z) on BBC sounds from the World Service program _More or less_; the broadcast refers to Matt Parker's book _Humble Pi A comedy of Maths Errors_ [@Mattparker2019Humble:61dc]. On a positive note spreadsheets are handy and easy to use for a few lines of data.
+You may ask what's wrong with the spreadsheet for data science? On a practical level spreadsheets are hard to maintain, find errors in or see there was an error in the first place, they are poor at handling dates[^22] and difficult to share with others.  For spreadsheet blunders listen to Tim Harford's [More or less](https://www.bbc.co.uk/sounds/play/w3ct3k5z) on BBC sounds[^24]; for a litany of mathematical mistakes, many involving spreadsheets, see Matt Parker's book _Humble Pi A comedy of Maths Errors_ [@Mattparker2019Humble:61dc]. On a positive note spreadsheets are handy and easy to use for a few lines of data.
 
-To help get ecologists started, all the code making the graphs and analysis in these web pages is free to copy and use;  just click on  _Show the code_, copy to the clipboard [^2], paste into the R environment and run. If new to R and RStudio see @sec-installr. 
+To help ecologists on their data science journey, all the code making the graphs and analysis in these web pages is free to copy and use;  just click on  _Show the code_, copy to the clipboard [^2], paste into the R environment and run. If new to R and RStudio see @sec-installr. 
 
 A _Show the code_ is given below, the code produces @fig-example.  The code copied to the clipboard is designed to run as a standalone _chunk_ (or _R script_)[^11]; the code loads the required R libraries and data.
 
@@ -72,8 +72,8 @@ Literate programming facilitates the use of other coding languages such as Pytho
 
 
 
-[^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>
-[^13]: R Markdown see <https://rmarkdown.rstudio.com/>
+[^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>.
+[^13]: R Markdown see <https://rmarkdown.rstudio.com/>.
 [^2]: Clip board icon is in the top right hand corner of the code window.
 
 [^5]:  Julia has a language syntax similar to Python, runs fast, has a statistical library like R and linear programming skills similar to MATLAB.
@@ -84,8 +84,11 @@ Literate programming facilitates the use of other coding languages such as Pytho
 
 [^11]: Many R script's are required in applying literate programming to bat data science; these are best organised through Quarto or R Markdown documents where the R scripts form code chunks.
 
-[^20]: The UK government has quantified the the UK Data Skills Gap see <https://www.gov.uk/government/publications/quantifying-the-uk-data-skills-gap/quantifying-the-uk-data-skills-gap-full-report>
-[^21]: The Chartered Institute of Ecology and Environmental Management (CIEEM) a leading institute for professional ecologists has a competency framework members are required to fulfill; this does not mention statistics or data science
+[^20]: The UK government has quantified the the UK Data Skills Gap see <https://www.gov.uk/government/publications/quantifying-the-uk-data-skills-gap/quantifying-the-uk-data-skills-gap-full-report>.
+[^21]: The data skills gap is relevant to professional bodies, such as the Chartered Institute of Ecology and Environmental Management (CIEEM) a leading institute for professional ecologists, with a competency framework members are required to fulfill; this does not mention statistics or data science.
+[^22]: Excel will try converting a data entry into a date even if it is not.
+[^23]: For example literate programming eliminates the countless copy and paste of a traditional reporting workflow.
+[^24]: Released on the World Service _More or Less on 11 Feb 2023 and available for over a year.
 
 ## Install R, RStudio and Packages {#sec-installr}
 
@@ -111,9 +114,9 @@ devtools::install_github("Nattereri/iBats")
 ## Acknowledgement {.unnumbered}
 
 
-Free and Open Source Software (FOSS) constitutes 70-90% of any modern software solution[^11]. R and RStudio are 
+Free and Open Source Software (FOSS) constitutes 70-90% of any modern software solution[^31]. R and RStudio are 
 open source software that have made data science more open, intuitive, accessible, and collaborative. As a Public Good[^10] the value of FOSS is yet to be fully recognised. FOSS is provided by a large community, without whom these web pages would not be written; some of this community are acknowledged as individuals in the references section of the [Resources](https://bat-survey-reporting.netlify.app/resources.html) page.
 
 [^10]: A commodity or service that is provided without profit to all members of a society, either by the government or by a private individual or organization.
 
-[^11]: <https://www.linuxfoundation.org/blog/blog/a-summary-of-census-ii-open-source-software-application-libraries-the-world-depends-on>
+[^31]: <https://www.linuxfoundation.org/blog/blog/a-summary-of-census-ii-open-source-software-application-libraries-the-world-depends-on>
